# simple_distributed_rl

./: .gitignore  LICENSE  README-en.md  README-pypi.md  README.md  README_test.rst  docker-compose-test.yml  docker-compose-tf-cpu.yml  docker-compose-tf-gpu.yml  docker-compose-tf210-cpu.yml  docker-compose-tf210-gpu.yml  docker-compose-torch.yml  history.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quick_test.yaml
algorithms/: agent57.py  agent57_light.py  agent57_stateful.py  alphazero.py  c51.py  ddpg.py  dqn.py  dynaq.py  mcts.py  muzero.py  planet.py  ql_agent57.py  r2d2.py  r2d2_stateful.py  rainbow.py  sac.py  search_dynaq.py  stochastic_muzero.py  vanilla_policy_continuous.py  vanilla_policy_discrete.py  world_models.py
configs/algorithms/: dqn_atari.yaml  ql.yaml
configs/context/: train.yaml  train_atari.yaml  train_atari_100k.yaml
configs/envs/: atari.yaml  atari_pong_easy.yaml
cpp/: README.md  setup_cpp.py
cpp/src/: proportional_memory.cpp
diagrams/: README.md  class.pu  class_env.pu  class_rl.pu  class_runner.pu  env_flow.pu  multiplay_flow.pu  overview.drawio  playflow.pu  playflow1.pu  playflow2.pu  runner_distributed_flow.pu  runner_mp_flow.pu  runner_mp_flow_trainer.pu  runner_mp_flow_worker.pu  sequence_flow.pu  singleplay_flow.pu  sync_flow.pu
dockers/: compose-gym-retro.yaml  compose-latest-tf-gpu.yaml  compose-latest-torch-gpu.yaml  compose-low.yaml  docker-compose-latest-tf-gpu.yml  docker-compose-latest-torch-gpu.yml  docker-compose-latest.yml  docker-compose-tf210-cpu.yml  docker-compose-tf210-gpu.yml  docker-compose-tf215-gpu.yml  docker-compose-torch-cpu.yml  docker-compose-torch-gpu.yml  dockerfile_gym_retro  dockerfile_latest  dockerfile_latest_tf_gpu  dockerfile_latest_torch_gpu  dockerfile_low  dockerfile_min  dockerfile_tf210_cpu  dockerfile_tf210_gpu  dockerfile_tf215_gpu  dockerfile_torch  gym_retro_compose.yaml  gym_retro_dockerfile  gym_retro_requirements.txt  latest_requirements.txt  latest_tf_gpu_compose.yaml  latest_tf_gpu_dockerfile  latest_torch_gpu_compose.yaml  latest_torch_gpu_dockerfile  low_compose.yaml  low_dockerfile  low_requirements.txt  mlflow_compose.yaml  requirements_gym_retro.txt  requirements_latest.txt  requirements_low.txt  requirements_min.txt  requirements_tf210.txt  requirements_tf215.txt  (+1 more)
dockers/archive/: compose-tf215-gpu.yaml  tf215_gpu_compose.yaml  tf215_gpu_dockerfile
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/pages/: custom_algorithm.html  custom_env.html  distributed.html  env_config.html  framework_detail.html  howtouse.html  install.html  ql.html  quickstart.html  rl_config.html  rl_config_memory.html  rl_config_model.html  rl_config_scheduler.html  rl_config_tree.html  run_context.html  runner.html  (+2 more)
docs_src/: conf.py  index.rst  make.bat  requirements.txt
envs/: __init__.py  cartpole_continuous.py  connectx.py  grid.py  igrid.py  oneroad.py  othello.py  ox.py  stone_taking.py  tiger.py
examples/: custom_env.ipynb  custom_rl.ipynb  minimum_env.py  minimum_raw_mp.py  minimum_raw_multiplay.py  minimum_raw_singleplay.py  minimum_runner.py  sample_atari.py  sample_atari_pong.py  sample_basic.py  sample_commonly.py  sample_custom.py  sample_demo_memory.py  sample_gym_retro.py  sample_long_training.py  sample_minimum.py  sample_minimum_raw_mp.py  sample_minimum_raw_sequence.py  sample_minimum_runner.py  sample_mlflow.py  sample_pendulum.py  sample_play_atari.py  sample_play_grid.py  sample_remote_actor.py  sample_remote_server.py  sample_rendering.ipynb  sample_runner.py
srl/: __init__.py  version.py
tests/: __init__.py  create_coverage.py  dockerfile_py379_dev_low  dockerfile_py379_min  dockerfile_tf210_cpu  dockerfile_tf210_gpu  dockerfile_tf_cpu  dockerfile_tf_gpu  dockerfile_torch  requirements_py3107_tf_gpu.txt  requirements_py379_dev_low.txt  requirements_tf.txt  requirements_torch.txt  test_play.py  utils.py
(+1326 files in other folders)
